--- a/src/component/Hero-section.css
+++ b/src/component/Hero-section.css
@@ -21,14 +21,13 @@
 }
 
 .Hero-Txt h1 {
-    margin: 0;
+    margin-left: 11%;
     line-height: 1.3;
-    padding-left: 250px;
-    font-size: 80px;
+    font-size: 120px;
     display: flex;
 }
 
-/* Each Letter Should Have the Gradient */
+
 .letter {
     display: inline-block;
     font-size: inherit;
@@ -50,8 +49,8 @@
 }
 
 .location-icon {
-    width: 32px; 
-    height: 32px;
+    width: 60px; 
+    height: 60px;
     margin-right: 20px; 
     padding-left: 450px;
     padding-top: 0px;
@@ -59,7 +58,7 @@
 }
 
 .address {
-    font-size: 1.25rem;
+    font-size: 1.7rem;
     color: #fff;
     padding-right: 500px;
     padding-top: 10px;
