--- a/src/component/Projects.css
+++ b/src/component/Projects.css
@@ -55,7 +55,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 80%;
+  height: 600px;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   position: relative;
   cursor: pointer;
@@ -94,14 +94,13 @@
 
 /* Hover effect: Enlarging the hovered box */
 .box:hover {
-  transform: scale(1.2);
+  transform: scale(1.09);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
   z-index: 5;
-  background: #fff; /* Ensure background remains solid */
+  background: #fff; 
   
 }
 
-/* Shrinking other boxes when one is hovered */
 .projectbox:hover .box:not(:hover) {
   transform: scale(0.9);
   opacity: 0.8;
