--- a/src/component/Hero-section.css
+++ b/src/component/Hero-section.css
@@ -1,9 +1,8 @@
 .Hero-Section {
     display: flex;
-    align-items: center;
     justify-content: center;
     padding: 50px 20px;
-    background: linear-gradient(135deg, #0b0c1e, #000);
+    background: linear-gradient(135deg, #060713, #000);
     height: 100vh;
     overflow: hidden;
 }
@@ -11,6 +10,7 @@
 .Hero-Content {
     display: flex;
     align-items: center; 
+    justify-content: center;
     width: 100%;
     max-width: fit-content;
     gap: 20px;
@@ -21,7 +21,7 @@
 }
 
 .Hero-Txt h1 {
-    margin-left: 11%;
+    margin-left: 18%;
     line-height: 1.3;
     font-size: 120px;
     display: flex;
@@ -40,16 +40,28 @@
     transition: transform 0.1s ease-out;
     will-change: transform;
 }
+.desc{
+    display: inline-block;
+    font-size: 1.4rem;
+    font-weight: 200;
+    font-family: 'Montserrat', sans-serif;
+    background: linear-gradient(to right, white, grey,white,grey);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin: 2%;
+    margin-left: 13%;
+}
 
 .Location {
     display: flex;
-    align-items: center;
     justify-content: center;
     margin: 20px 0;
+    margin-left: 10px;
 }
 
 .location-icon {
-    width: 60px; 
+   
     height: 60px;
     margin-right: 20px; 
     padding-left: 450px;
