--- a/src/component/Projects.css
+++ b/src/component/Projects.css
@@ -35,7 +35,7 @@
 .projectbox {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  row-gap: 100px; /* Ensures 100px gap between rows */
+  row-gap: 100px; 
   column-gap: 16px;
   padding: 16px;
   z-index: 10;
