--- a/src/component/work.css
+++ b/src/component/work.css
@@ -1,16 +1,21 @@
-.title {
+.work {
     text-align: center;
-    margin: 50px 0;
-    z-index: 1000000;
+    margin: 10px 0;
+    background: linear-gradient(135deg, #060713, #000);
+    border: 1px solid rgba(0, 153, 255, 0.30); 
+    box-shadow: 0 0 10px rgba(0, 153, 255, 0.80);
+    position:relative;
+    z-index: 10000000;
   }
   
   .title h1 {
-    font-size: 70px;
+    font-size: 100px;
     margin-bottom: 10px;
+    margin-top: 10px;
     font-family: 'Montserrat', sans-serif;
     background: linear-gradient(to right, #fff, #ccc);
     -webkit-background-clip: text;
-    color: #000; /* Ensure text remains visible */
+    color: #000; 
   }
   
   .letter {
@@ -21,6 +26,8 @@
     background: linear-gradient(to right, white, grey);
     -webkit-background-clip: text;
     color: #000; /* Ensure text remains visible */
+    margin-top: 4%;
+    font-size: 100px !important;
   }
   
   .title .description {
@@ -32,18 +39,17 @@
     justify-content: center;
   }
   
-  .projectbox {
+  .workbox {
     display: grid;
+    z-index: 1000000;
+    align-items: center;
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 100px; /* Ensures 100px gap between rows */
     column-gap: 16px;
-    padding: 16px;
-    z-index: 10;
-    margin-top: 3%;
     margin-left: 15%;
-    height: 80%;
+    margin-top: 5%;
+    height: 70%;
     width: 70%;
-    padding-bottom: 100px;
+
   }
   
   /* Base styles for project boxes */
@@ -60,7 +66,7 @@
     position: relative;
     cursor: pointer;
     background: rgba(20, 30, 50, 0.8); /* Dark navy with transparency */
-    border: 1px solid rgba(0, 153, 255, 0.2); /* Soft blue border */
+    border: 1px solid rgba(0, 153, 255, 0.2); 
     box-shadow: 0 0 10px rgba(0, 153, 255, 0.15);
     color: rgba(255, 255, 255, 0.9);
     margin-bottom: 100px;
