--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background:linear-gradient(135deg, #0b0c1e, #000);  ;
+  background:linear-gradient(135deg, #0b0c1e, #000);
 
 }
 .main_body{
