--- a/src/component/Hero-section.css
+++ b/src/component/Hero-section.css
@@ -1,6 +1,7 @@
 .Hero-Section {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 50px 20px;
     background: linear-gradient(135deg, #060713, #000);
     height: 100vh;
@@ -9,11 +10,12 @@
 
 .Hero-Content {
     display: flex;
-    align-items: center; 
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
-    max-width: fit-content;
     gap: 20px;
+    text-align: center;
 }
 
 .Hero-Txt {
@@ -21,10 +23,11 @@
 }
 
 .Hero-Txt h1 {
-    margin-left: 18%;
+    margin: 0; 
     line-height: 1.3;
     font-size: 120px;
     display: flex;
+    justify-content: center; 
 }
 
 
@@ -39,9 +42,10 @@
     background-clip: text;
     transition: transform 0.1s ease-out;
     will-change: transform;
+    text-align: center;
 }
 .desc{
-    display: inline-block;
+    display: block ;
     font-size: 1.4rem;
     font-weight: 200;
     font-family: 'Montserrat', sans-serif;
@@ -50,21 +54,18 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     margin: 2%;
-    margin-left: 13%;
+    text-align: center;
 }
 
 .Location {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
-    margin-left: 10px;
+    align-items: center
+
 }
 
 .location-icon {
-   
-    height: 60px;
-    margin-right: 20px; 
-    padding-left: 450px;
+    height: 50px;
     padding-top: 0px;
     transform: translateY(6px);
 }
@@ -72,6 +73,5 @@
 .address {
     font-size: 1.7rem;
     color: #fff;
-    padding-right: 500px;
     padding-top: 10px;
 }
