--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -10,6 +10,9 @@
 }
 .footer-content{
     align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 20%;
 }
 .icon{
     width: 150px;
@@ -36,4 +39,5 @@
     background-color: #333;
     width: 100%;
     padding-bottom: 10px;
+    width: 100%;
   }
