--- a/src/component/work.css
+++ b/src/component/work.css
@@ -38,7 +38,7 @@
     margin-bottom: 80px;
     justify-content: center;
   }
-  
+/*   
   .workbox {
     display: grid;
     z-index: 1000000;
@@ -50,10 +50,10 @@
     height: 70%;
     width: 70%;
 
-  }
+  } */
   
   /* Base styles for project boxes */
-  .box {
+  .workbox {
     border-radius: 8px;
     padding: 16px;
     text-align: center;
@@ -63,7 +63,6 @@
     justify-content: flex-start;
     height: 600px;
     transition: transform 0.4s ease, box-shadow 0.4s ease;
-    position: relative;
     cursor: pointer;
     background: rgba(20, 30, 50, 0.8); /* Dark navy with transparency */
     border: 1px solid rgba(0, 153, 255, 0.2); 
@@ -72,7 +71,7 @@
   }
   
   /* Image styles */
-  .box img {
+  .workbox img {
     max-width: 100%;
     height: 200px;
     border-radius: 4px;
@@ -81,7 +80,7 @@
   }
   
   /* Description styling */
-  .box p {
+  .workbox p {
     font-size: 1.3em;
     font-weight: normal;
     margin-top: 20px;
@@ -91,14 +90,14 @@
     color: rgba(255, 255, 255, 0.9);
   }
   
-  .box p strong {
+  .workbox p strong {
     font-size: 1.5em;
     font-weight: bold;
     color: rgba(255, 255, 255, 0.9);
   }
   
   /* Hover effect: Enlarging the hovered box */
-  .box:hover {
+  .workbox:hover {
     transform: scale(1.09);
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
     z-index: 5;
@@ -106,19 +105,19 @@
     
   }
   
-  .projectbox:hover .box:not(:hover) {
+  .workbox:hover .workbox:not(:hover) {
     transform: scale(0.9);
     opacity: 0.8;
   }
   
   /* Image zoom-in effect on hover */
-  .box:hover img {
+  .workbox:hover img {
     transform: scale(1.1);
   }
-  .box:hover p{
+  .workbox:hover p{
     color:#000
   }
-  .box:hover p strong{
+  .workbox:hover p strong{
     color:#000
   }
   /* Smooth appearance animation */
