--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,5 @@
-body{
-  background:linear-gradient(135deg, #0b0c1e, #000);
+.main{
+  background:Linear-gradient(135deg, #060713,#000, #000);
 
 }
 .main_body{
