--- a/src/Styles/Hero-section.css
+++ b/src/Styles/Hero-section.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     padding: 50px 20px;
-    background: linear-gradient(135deg, #060713, #000);
+    /* background: linear-gradient(135deg, #060713, #000); */
     height: 100vh;
     overflow: hidden;
 }
