Making it beautiful

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,5 @@
 .main{
-  background:Linear-gradient(135deg, #060713,#000, #000);
+  background: linear-gradient(135deg, #090b20, #060713, #000);
 
 }
 .main_body{
