--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,6 @@
 .main{
-  background:Linear-gradient(135deg, #060713,#000, #000);
+  /* background:Linear-gradient(135deg, #060713,#000, #000); */
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 1) 100%);
 
 }
 .main_body{
