--- a/src/Styles/Hero-section.css
+++ b/src/Styles/Hero-section.css
@@ -5,6 +5,7 @@
     padding: 50px 20px;
     height: 100vh;
     overflow: hidden;
+    /* background: radial-gradient(circle, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 1) 100%); */
 }
 
 .Hero-Content {
@@ -15,10 +16,12 @@
     width: 100%;
     gap: 20px;
     text-align: center;
+    
 }
 
 .Hero-Txt {
     flex: 1;
+    
 }
 
 .Hero-Txt h1 {
@@ -33,25 +36,24 @@
 .letter {
     display: inline-block;
     font-size: inherit;
-    font-weight: 900;
+    font-weight: 800;
     font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(to right, white, grey);
+    background: linear-gradient(to right, #fff,#fff,#bbb, #777); /* Soft gray gradient */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    transition: transform 0.1s ease-out;
-    will-change: transform;
-    text-align: center;
+    transition: transform 0.1s ease-out, text-shadow 0.3s ease-in-out;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); 
+    opacity: 0.85; 
 }
 .desc{
-    display: block ;
+    display: block;
     font-size: 1.4rem;
     font-weight: 200;
     font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(to right, white, grey,white,grey);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    background-clip: text;
     margin: 2%;
     text-align: center;
 }
@@ -59,18 +61,22 @@
 .Location {
     display: flex;
     justify-content: center;
-    align-items: center
-
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .location-icon {
-    height: 50px;
-    padding-top: 0px;
-    transform: translateY(6px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .address {
     font-size: 1.7rem;
-    color: #fff;
-    padding-top: 10px;
+    font-weight: bold;
+    color: white;
+    text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
 }
