--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -3,7 +3,7 @@
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
-  background-color: #121212;
+  /* background-color: #121212; */
   margin-top: 20%;
   z-index: 10;
   position: relative;
