--- a/src/Styles/Work.css
+++ b/src/Styles/Work.css
@@ -14,13 +14,13 @@
   text-align: center;
   margin-bottom: 3rem;
   width: 100%;
-  font-size: 80px !important;
 }
 
 .work-title {
   color: #ffffff;
   font-size: 5rem;
   margin-bottom: 0.5rem;
+  font-weight: 700;
 }
 
 .static-title {
