work exp improvement

--- a/src/Styles/Work.css
+++ b/src/Styles/Work.css
@@ -62,7 +62,14 @@
   box-shadow: 0 8px 28px rgba(0, 0, 0, 0.4);
   border-color: rgba(255, 255, 255, 0.2);
 }
-
+.work-card-body ul {
+  list-style-type: disc;
+  padding-left: 20px; /* Adds indentation for better visibility */
+  color: white;
+}
+.work-card-body ol {
+    color: white; /* Adjust to match visibility */
+}
 .work-card-header {
   display: flex;
   align-items: center;
