--- a/src/Styles/Hero-section.css
+++ b/src/Styles/Hero-section.css
@@ -28,8 +28,8 @@
     margin: 0; 
     line-height: 1.3;
     font-size: 120px;
-    display: flex;
-    justify-content: center; 
+    /* display: flex;
+    justify-content: center;  */
 }
 
 .letter {
@@ -56,8 +56,10 @@
     margin: 2%;
     text-align: center;
     line-height: 1.6;
-    max-width: 800px;
+    /* max-width: 800px; */
     animation: fadeIn 1s ease-in-out;
+    margin-left: 1.6%;
+
 }
 
 .Location {
