--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -50,11 +50,13 @@
   transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   position: relative;
   z-index: 1;
-  background:Linear-gradient(135deg, #060713,#000, #000);
+  background: linear-gradient(135deg, #060713, #000, #000);
   border-radius: 12px;
   box-shadow: 0 10px 28px rgba(0, 0, 0, 0.3);
   padding: 1.5rem;
   border: 3px solid rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
 .project-card.hovered {
@@ -69,22 +71,20 @@
   flex-direction: row;
   align-items: stretch;
   width: 100%;
-  height: 100%; 
+  height: 100%;
+  min-height: 300px; /* Add a minimum height */
 }
 
 .project-image-container {
   position: relative;
-  flex: 1;
-  object-fit: cover;
+  flex: 0 0 50%; 
+  max-width: 50%; /* Add this to ensure image container doesn't expand beyond 40% */
   border-radius: 3px;
   margin-right: 1rem;
   overflow: hidden;
   box-shadow: 0 10px 28px rgba(0, 0, 0, 0.3);
   border: 3px solid rgba(255, 255, 255, 0.1);
-}
-
-.project-card:hover .project-overlay {
-  opacity: 1; 
+  height: 300px; /* Set fixed height */
 }
 
 .project-image {
@@ -97,17 +97,23 @@
 .project-card:hover .project-image {
   transform: scale(1.1);
 }
-
+.project-card:hover .project-image-container{
+  margin-top:8%
+}
 .project-overlay {
   position: absolute;
-  inset: 0rem;
+  inset: 0;
   background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.7));
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding: 1.5rem;
-  visibility: hidden; 
-  transition: visibility 0.3s ease; 
+  opacity: 0; /* Change visibility to opacity */
+  transition: opacity 0.3s ease;
+}
+
+.project-card:hover .project-overlay {
+  opacity: 1; /* Change visibility to opacity */
 }
 
 .project-card:hover .project-overlay {
@@ -130,8 +136,11 @@
 .project-info {
   flex: 1;
   padding: 2rem;
-  height: 300px;
-} 
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; /* Add this to contain overflowing content */
+}
+
 
 .project-title {
   font-size: 1.8rem;
@@ -150,6 +159,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow-y: auto; /* Allow scrolling if needed */
+  max-height: 100%;
 }
 
 .project-description {
