--- a/src/Styles/Nav-bar.css
+++ b/src/Styles/Nav-bar.css
@@ -5,7 +5,7 @@
     background-color: linear-gradient(135deg, #0b0c1e, #000);;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 90%;
     z-index: 100;
     box-sizing: border-box; 
   }
@@ -19,13 +19,13 @@
     font-weight: bold;
     color: #fff;
     padding-bottom: 50px;
-    margin-right: 73%;
     top: 20px;
     position: relative;
   }
   .contact-info {
     display: flex;
     align-items: center;
+    margin-left: auto;
   }
   
   .button {
