--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -192,7 +192,7 @@
 
 .project-btn {
   padding: 0.5rem 1rem;
-  background-color: inherit;
+  background-color: #333;
   color: red;
   border:1px solid red;
   border-radius: 6px;
